--- a/hw_2/second_homework.ipynb
+++ b/hw_2/second_homework.ipynb
@@ -9,9 +9,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: numpy in /home/vladislav/.local/lib/python3.10/site-packages (1.26.4)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /home/vladislav/.local/lib/python3.10/site-packages (2.2.1)\n",
+      "Requirement already satisfied: numpy<2,>=1.22.4 in /home/vladislav/.local/lib/python3.10/site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/vladislav/.local/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/vladislav/.local/lib/python3.10/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: seaborn in /home/vladislav/.local/lib/python3.10/site-packages (0.13.2)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /home/vladislav/.local/lib/python3.10/site-packages (from seaborn) (1.26.4)\n",
+      "Requirement already satisfied: pandas>=1.2 in /home/vladislav/.local/lib/python3.10/site-packages (from seaborn) (2.2.1)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /home/vladislav/.local/lib/python3.10/site-packages (from seaborn) (3.8.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.0)\n",
+      "Requirement already satisfied: pillow>=8 in /usr/lib/python3/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (9.0.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/lib/python3/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas>=1.2->seaborn) (2022.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/vladislav/.local/lib/python3.10/site-packages (from pandas>=1.2->seaborn) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: matplotlib in /home/vladislav/.local/lib/python3.10/site-packages (3.8.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: numpy>=1.21 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib) (24.0)\n",
+      "Requirement already satisfied: pillow>=8 in /usr/lib/python3/dist-packages (from matplotlib) (9.0.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/vladislav/.local/lib/python3.10/site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: scikit-learn in /home/vladislav/.local/lib/python3.10/site-packages (1.4.2)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /home/vladislav/.local/lib/python3.10/site-packages (from scikit-learn) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /home/vladislav/.local/lib/python3.10/site-packages (from scikit-learn) (1.13.0)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /home/vladislav/.local/lib/python3.10/site-packages (from scikit-learn) (1.4.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/vladislav/.local/lib/python3.10/site-packages (from scikit-learn) (3.4.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Установим такие библиотеки как numpy, pandas, seaborn, matplotlib\n",
     "%pip install numpy && pip install pandas && pip install seaborn && pip install matplotlib && pip install -U scikit-learn"
@@ -19,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +617,7 @@
        "14                      1        0           0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +784,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +808,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,14 +827,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10444/1395531739.py:2: FutureWarning: \n",
+      "/tmp/ipykernel_5703/1395531739.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -809,14 +860,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10444/592714291.py:4: FutureWarning: \n",
+      "/tmp/ipykernel_5703/592714291.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -844,14 +895,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10444/654932214.py:4: FutureWarning: \n",
+      "/tmp/ipykernel_5703/654932214.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -879,14 +930,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10444/3927750134.py:4: FutureWarning: \n",
+      "/tmp/ipykernel_5703/3927750134.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -914,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,12 +1018,14 @@
    "source": [
     "Далее мы разделим данные на тестовую и тренировочную выборку.\n",
     "\n",
-    "Думаю, что такое разбиение будет лучше всего для нашего случая, что не даст лишних утечек данных "
+    "Думаю, что такое разбиение будет лучше всего для нашего случая, что не даст лишних утечек данных.\n",
+    "\n",
+    "Так же зафиксируем random_state, который будет равен 123."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +1034,7 @@
        "((1654, 18), (414, 18), (1654, 1), (414, 1))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,13 +1063,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Результат: \n",
       "0.5\n"
      ]
     }
@@ -1028,7 +1082,7 @@
     "model = DummyClassifier(strategy='most_frequent')\n",
     "\n",
     "model.fit(X_train, y_train)\n",
-    "\n",
+    "print(\"Результат: \")\n",
     "print(roc_auc_score(y_test, model.predict_proba(X_test)[:, 1]))"
    ]
   },
@@ -1058,7 +1112,6 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "\n",
     "g=GaussianNB()\n",
@@ -1066,26 +1119,23 @@
     "k=KNeighborsClassifier()\n",
     "l=LogisticRegression()\n",
     "d=DecisionTreeClassifier()\n",
-    "r=RandomForestClassifier()\n",
     "\n",
     "g.fit(X_train,y_train)\n",
     "b.fit(X_train,y_train)\n",
     "k.fit(X_train,y_train)\n",
     "l.fit(X_train,y_train)\n",
     "d.fit(X_train,y_train)\n",
-    "r.fit(X_train,y_train)\n",
     "\n",
     "predG=g.predict(X_train)\n",
     "predB=b.predict(X_train)\n",
     "predK=k.predict(X_train)\n",
     "predL=l.predict(X_train)\n",
-    "predD=d.predict(X_train)\n",
-    "predR=r.predict(X_train)\n"
+    "predD=d.predict(X_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1097,21 +1147,79 @@
       "BernoulliNB:       0.7212817412333736\n",
       "KNeighbours:       0.9177750906892382\n",
       "LogisticReg:       0.7750906892382105\n",
-      "DecisionTree:      1.0\n",
-      "RandomForest:      1.0\n"
+      "DecisionTree:      1.0\n"
      ]
     }
    ],
    "source": [
-    "# Print 'accuracy scores'\n",
+    "# Вывести 'accuracy scores'\n",
     "\n",
     "print('Accuracy Scores:')\n",
     "print(\"GaussianNB:       \", accuracy_score(predG,y_train))\n",
     "print(\"BernoulliNB:      \", accuracy_score(predB,y_train))\n",
     "print(\"KNeighbours:      \", accuracy_score(predK,y_train))\n",
     "print(\"LogisticReg:      \", accuracy_score(predL,y_train))\n",
-    "print(\"DecisionTree:     \", accuracy_score(predD,y_train))\n",
+    "print(\"DecisionTree:     \", accuracy_score(predD,y_train))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Сложные модели"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Попробуем так же замерить показатели модели RandomForestClassifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "r=RandomForestClassifier()\n",
+    "\n",
+    "r.fit(X_train,y_train)\n",
+    "\n",
+    "predR=r.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForest:      1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Вывести 'accuracy scores'\n",
     "print(\"RandomForest:     \", accuracy_score(predR,y_train))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Хотя обе модели (RandomForestClassifier и DecisionTreeClassifier) получили оценку точности 1, есть несколько причин, по которым я выбрал RandomForestClassifier:\n",
+    "\n",
+    "1)Случайный лес — это метод ансамблевого обучения, который объединяет несколько деревьев решений для улучшения общей производительности и уменьшения переобучения. Это означает, что даже если одно дерево в лесу допустит ошибку, другие деревья смогут ее исправить, что приведет к более надежным прогнозам.\n",
+    "\n",
+    "2)Случайный лес использует пакетирование (агрегирование начальной загрузки) для создания нескольких подмножеств исходных данных, которые затем используются для обучения отдельных деревьев. Это помогает уменьшить дисперсию модели и улучшить ее обобщение на новые данные.\n",
+    "\n",
+    "3)Случайный лес также использует случайность объектов, при которой для разделения на каждом узле рассматривается только случайное подмножество объектов. Это помогает декоррелировать деревья и еще больше уменьшить переобучение."
    ]
   },
   {
